Tag "current" ai vari elementi del menu
SITO PRONTO 100% (credo)

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -48,22 +48,19 @@
 
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/" title="">Home</a></li>									
-					<li class="has-children">
-						<li class="has-children">Categorie
+					<li><a href="/" title="">Home</a></li>
+					<li><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
-			            <li><a href="/mostraFotos">Foto</a></li>
-			            <li><a href="/mostraAlbums">Album</a></li>
-			            <li><a href="/mostraFotografi">Fotografi</a></li>
-			         </ul>
-					</li>
-					<li class="has-children">
-						<a href="/mostraCarrello" title="">Carrello</a>
-					</li>
-					<li class="current"><a href="/about" title="">About</a></li>	
-					<li><a href="/pannelloDiControllo" title="">Staff</a></li>										
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
+						</ul></li>
+					<li class="has-children"><a href="/mostraCarrello"
+						title="">Carrello</a></li>
+					<li class="current"><a href="/about" title="">About</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
-		</nav> <!-- end main-nav-wrap -->
+			</nav><!-- end main-nav-wrap -->
 
    		
    	</div>     		
