--- a/src/main/resources/templates/mostraCarrello.html
+++ b/src/main/resources/templates/mostraCarrello.html
@@ -55,14 +55,14 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children">Categorie
+					<li><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
-						</ul>
-					</li>
-					<li class="current"><a href="/mostraCarrello">Carrello</a></li>
+						</ul></li>
+					<li class="current"><a href="/mostraCarrello"
+						title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
 					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
