--- a/src/main/resources/templates/albumForm.html
+++ b/src/main/resources/templates/albumForm.html
@@ -49,7 +49,7 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children">Categorie
+					<li class="current"><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
@@ -58,7 +58,7 @@
 					<li class="has-children"><a href="/mostraCarrello"
 						title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
-					<li class="current"><a href="/pannelloDiControllo" title="">Staff</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
 			</nav>
 			<!-- end main-nav-wrap -->
