--- a/src/main/resources/templates/fotoForm.html
+++ b/src/main/resources/templates/fotoForm.html
@@ -49,7 +49,7 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children">Categorie
+					<li><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
