--- a/src/main/resources/templates/ricercaFoto.html
+++ b/src/main/resources/templates/ricercaFoto.html
@@ -49,13 +49,13 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children">Categorie
+					<li><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
-					<li class="has-children"><a href="/mostraCarrello"
+					<li><a href="/mostraCarrello"
 						title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
 					<li class="current"><a href="/pannelloDiControllo" title="">Staff</a></li>
