--- a/src/main/resources/templates/mostraAlbum.html
+++ b/src/main/resources/templates/mostraAlbum.html
@@ -33,8 +33,8 @@
 
 <!-- favicons
 	================================================== -->
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+<link rel="icon" href="../favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -109,7 +109,7 @@
 
 			
 			<!-- PULSANTE INOLTRA RICHIESTA -->
-			<article class="brick entry format-standard animate-this">
+			<article class="brick entry format-standard animate-this" align="middle">
 
 				<a th:href="@{/cercaAlbum}" th:if="${utente == 'ADMIN'}">
 					<button type="submit" class="half-width">Nuova ricerca</button>
