--- a/src/main/resources/templates/mostraAlbums.html
+++ b/src/main/resources/templates/mostraAlbums.html
@@ -58,7 +58,7 @@
 					<li class="current"><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
-							<li><a href="/mostraAlbums">Album</a></li>
+							<li class="current"><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li><a href="/mostraCarrello"
