--- a/src/main/resources/templates/mostraFotografi.html
+++ b/src/main/resources/templates/mostraFotografi.html
@@ -58,7 +58,7 @@
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
-							<li><a href="/mostraFotografi">Fotografi</a></li>
+							<li class="current"><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li><a href="/mostraCarrello"
 						title="">Carrello</a></li>
