--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -57,7 +57,7 @@
 					<li><a href="/" title="">Home</a></li>
 					<li class="current"><a class="has-children">Categorie</a>
 						<ul class="sub-menu">
-							<li><a href="/mostraFotos">Foto</a></li>
+							<li class="current"><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
