--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -95,13 +95,14 @@
 		</div>
 	</section>
 
-
-	<div class="alert-box ss-success hideit" align="left"
-		style="width: 7cm; height: 2cm; position: relative; margin-left: 41.4%"
+<div class="row masonry" align="middle">
+	<div class="alert-box ss-success hideit"
+		style="width: 7cm; height: 2cm;"
 		th:if="${aggiunto == 'TRUE'}">
 		<p>Foto aggiunta corretamente</p>
 		<i class="fa fa-times close"></i>
 	</div>
+</div>
 	<!-- /success -->
 
 
