--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -136,21 +136,16 @@
 						<div class="entry-text">
 							<div class="entry-header">
 								<div class="entry-meta">
-									<span class="cat-links"> <span
-										th:text="${foto.fotografo.nome} + ' ' +${foto.fotografo.cognome}"></span>
+									<span class="cat-links"> 
+										<a th:href="@{'/fotografo' + '/' + ${foto.fotografo.id}}" th:text="${foto.fotografo.nome} + ' ' +${foto.fotografo.cognome}"></a>
 									</span>
 								</div>
 
 								<h1 class="entry-title">
-									<a th:text="${foto.titolo}"></a>
+									<span th:text="${foto.titolo}"></span>
 								</h1>
 
 							</div>
-
-							<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-								aliqua sed incididunt aliqua incididunt mollit id et sit
-								proident dolor nulla sed</div>
-
 						</div>
 					</article>
 				</div>
